--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/stylesheet" href="styles.css" />
+
 </head>
 <body>
   <app-root></app-root>
+  <div id="notesDiv" class="note"></div>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
