Added dropdown for clef selection - options are bass and treble

--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,11 @@
 <body>
   <app-root></app-root>
   <div id="notesDiv" class="note"></div>
+  <div id="pianoSettings">
+    <select id="clefDropDown">
+      <option value="bassClef">Bass</option>
+      <option value="trebleClef">Treble</option>
+    </select>
+  </div>
 </body>
 </html>
