Interval textBox added

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
     </select>
     <br />
     <input type="checkbox" id="autoCheckBox" /><label for="autoCheckBox">Auto-display</label>
+    <br />
+    <input type="text" disabled="disabled" id="intervalTextBox" value="1000" /> Refresh Interval (ms)
   </div>
 </body>
 </html>
