Added logic to store the value of selected clef within the class and redraw clef method

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
   <div id="notesDiv" class="note"></div>
   <div id="pianoSettings">
     Select Clef: <select id="clefDropDown">
-      <option value="bassClef">Bass</option>
-      <option value="trebleClef">Treble</option>
+      <option value="bass">Bass</option>
+      <option value="treble">Treble</option>
     </select>
     <br />
     <input type="checkbox" id="autoCheckBox" /><label for="autoCheckBox">Auto-display</label>
