--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <br />
     <input type="checkbox" id="autoCheckBox" /><label for="autoCheckBox">Auto-display</label>
     <br />
-    <input type="text" disabled="disabled" id="intervalTextBox" value="1000" /> Refresh Interval (ms)
+    <input type="number" disabled="disabled" id="intervalTextBox" value="1000" /> Refresh Interval (ms)
   </div>
 </body>
 </html>
