--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>PianoTest2</title>
@@ -9,18 +10,28 @@
   <link rel="stylesheet" type="text/stylesheet" href="styles.css" />
 
 </head>
+
 <body>
   <app-root></app-root>
   <div id="notesDiv" class="note"></div>
-  <div id="pianoSettings">
-    Select Clef: <select id="clefDropDown">
-      <option value="bass">Bass</option>
-      <option value="treble">Treble</option>
-    </select>
-    <br />
-    <input type="checkbox" id="autoCheckBox" /><label for="autoCheckBox">Auto-display</label>
-    <br />
-    <input type="number" disabled="disabled" id="intervalTextBox" value="1000" /> Refresh Interval (ms)
+  <div id="settings">
+    <div id="recorded">
+        <input type="checkbox" id="playRecordedCheckBox" />
+        <label for="playRecordedCheckBox">Play Recorded Notes</label>
+    </div>
+    <div id="pianoSettings">
+      Select Clef:
+      <select id="clefDropDown">
+        <option value="bass">Bass</option>
+        <option value="treble">Treble</option>
+      </select>
+      <br />
+      <input type="checkbox" id="autoCheckBox" />
+      <label for="autoCheckBox">Auto-display</label>
+      <br />
+      <input type="number" disabled="disabled" id="intervalTextBox" value="1000" /> Refresh Interval (ms)
+    </div>
   </div>
 </body>
+
 </html>
