--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
       <input type="checkbox" id="autoCheckBox" />
       <label for="autoCheckBox">Auto-display</label>
       <br />
+      <input type="checkbox" id="accidentalsCheckBox" />
+      <label for="accidentalsCheckBox">Accidentals</label>
+      <br />
       <input type="number" disabled="disabled" id="intervalTextBox" value="1000" /> Refresh Interval (ms)
     </div>
   </div>
