--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,8 @@
             <div id="recorded">
               <input type="checkbox" id="playRecordedCheckBox" />
               <label for="playRecordedCheckBox">Play Recorded Notes</label>
+              <input type="checkbox" id="multipleNotesCheckBox" checked="checked" />
+              <label for="multipleNotesCheckBox">Multiple Notes</label>
               <div id="recordDiv" style="display:none;">
                 <textarea id="recordString"></textarea>
                 <button id="startButton">Start</button>
