moved Multiple Notes checkbox into new line

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           <div class="col-md-6">
             <div id="recorded">
               <input type="checkbox" id="playRecordedCheckBox" />
-              <label for="playRecordedCheckBox">Play Recorded Notes</label>
+              <label for="playRecordedCheckBox">Play Recorded Notes</label><br />
               <input type="checkbox" id="multipleNotesCheckBox" checked="checked" />
               <label for="multipleNotesCheckBox">Multiple Notes</label>
               <div id="recordDiv" style="display:none;">
